# chess-vision-trainer

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  configure.ac
doc/: chess-vision-trainer.1
src/: main.c
